--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1367,14 +1367,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 49.8M/49.8M [00:01<00:00, 38.6MB/s]\n",
-      "400 - Bad Request - Submission not allowed:  Your team has used its daily Submission allowance (5) today, please try again tomorrow UTC (11 hours from now).\n"
+      "100%|██████████████████████████████████████| 49.7M/49.7M [00:00<00:00, 58.7MB/s]\n",
+      "Successfully submitted to Open Problems – Single-Cell Perturbations"
      ]
     }
    ],
    "source": [
     "%cd /home/yz979/code/kaggle-perturbation\n",
-    "!kaggle competitions submit -c open-problems-single-cell-perturbations -f data/submission_6.csv -m \"submit\""
+    "!kaggle competitions submit -c open-problems-single-cell-perturbations -f data/submission_7.csv -m \"submit\""
    ]
   }
  ],
