--- a/notebooks/1-Preprocessing/1.1-Load_Expression_Data.ipynb
+++ b/notebooks/1-Preprocessing/1.1-Load_Expression_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
     "atac_adata = counts_adata.copy()[:, counts_adata.var['feature_type'] == 'Peaks']\n",
     "counts_adata = ad.concat([rna_adata, atac_adata], axis=1, merge=\"same\")\n",
     "\n",
-    "counts_adata.write_h5ad(os.path.join(data_dir, 'multiome_train.h5ad'))\n"
+    "counts_adata.write_h5ad(os.path.join(data_dir, 'multiome_train.h5ad'))"
    ]
   },
   {
@@ -229,15 +229,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yz979/miniconda3/envs/kaggle2/lib/python3.11/site-packages/anndata/_core/anndata.py:522: FutureWarning: The dtype argument is deprecated and will be removed in late 2024.\n",
+      "  warnings.warn(\n",
+      "/home/yz979/miniconda3/envs/kaggle2/lib/python3.11/site-packages/anndata/_core/anndata.py:183: ImplicitModificationWarning: Transforming to str index.\n",
+      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 614 × 18211\n",
+       "    obs: 'cell_type', 'sm_name', 'sm_lincs_id', 'SMILES', 'control'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_dir = 'data'\n",
     "de_train_df = pd.read_parquet(os.path.join(data_dir, 'de_train.parquet'))\n",
     "\n",
     "de_train_obs_meta_df = de_train_df.iloc[:, :5]\n",
-    "de_train_df = de_train_df.iloc[:, 5:]"
+    "de_train_counts = de_train_df.iloc[:, 5:]\n",
+    "\n",
+    "counts_adata = ad.AnnData(\n",
+    "    X=de_train_counts,\n",
+    "    obs=de_train_obs_meta_df,\n",
+    "    dtype=np.uint32,\n",
+    ")\n",
+    "\n",
+    "counts_adata.write_h5ad(os.path.join(data_dir, 'de_train.h5ad'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading id map for submission\n",
+    "Here we load the id map for submission. We also add more information to the `.obs` attribute of the AnnData object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yz979/miniconda3/envs/kaggle2/lib/python3.11/site-packages/anndata/_core/anndata.py:522: FutureWarning: The dtype argument is deprecated and will be removed in late 2024.\n",
+      "  warnings.warn(\n",
+      "/home/yz979/miniconda3/envs/kaggle2/lib/python3.11/site-packages/anndata/_core/anndata.py:183: ImplicitModificationWarning: Transforming to str index.\n",
+      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dir = 'data'\n",
+    "id_map_obs_meta_df = pd.read_parquet(os.path.join(data_dir, 'id_map.parquet'))\n",
+    "id_map_counts = np.zeros((len(id_map_obs_meta_df), de_train_counts.shape[1]), dtype=np.uint32)\n",
+    "\n",
+    "id_map_adata = ad.AnnData(\n",
+    "    X=id_map_counts,\n",
+    "    obs=id_map_obs_meta_df,\n",
+    "    dtype=np.uint32,\n",
+    ")\n",
+    "\n",
+    "# add smiles and control to id_map_adata.obs\n",
+    "id_map_adata.var_names = counts_adata.var_names\n",
+    "smile_map = de_train_obs_meta_df[['sm_lincs_id', 'SMILES']].drop_duplicates().set_index('sm_lincs_id')\n",
+    "id_map_adata.obs = id_map_adata.obs.join(smile_map, on='sm_lincs_id')\n",
+    "id_map_adata.obs['control'] = False\n",
+    "\n",
+    "id_map_adata.write_h5ad(os.path.join(data_dir, 'id_map.h5ad'))"
    ]
   }
  ],
